# heart-box-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  configure.sh  platformio.ini  sdkconfig  sdkconfig.defaults
.github/: copilot-instructions.md
.github/chatmodes/: Code Review.chatmode.md
.github/instructions/: Project Summary.instructions.md  aws-iot.instructions.md  task-architecture-specification.instructions.md
.github/workflows/: build_esp_idf.yml  ci.yml  ci_docker.yml  release.yml
components/aws_iot_task/: CMakeLists.txt  aws_iot_task.c
components/aws_iot_task/include/: aws_iot_task.h
components/file_system/: CMakeLists.txt  file_system.c
components/file_system/include/: file_system.h
components/gpio_task/: CMakeLists.txt  gpio_task.c
components/gpio_task/include/: gpio_task.h
components/state_machine_task/: CMakeLists.txt  state_machine_task.c
components/state_machine_task/include/: state_machine_task.h
components/system-wrappers/: CMakeLists.txt
components/system_wrappers/: CMakeLists.txt  generic_task.c
components/system_wrappers/include/: generic_task.h  message_types.h
components/wifi_task/: CMakeLists.txt  wifi_http_server.c  wifi_task.c
components/wifi_task/include/: wifi_task.h
docker/: entrypoint.sh
docker/linux/: docker-build.sh  docker-container-start.sh  docker-exec.sh
include/: application.h  aws_iot.h  certs.h  generic_task.h  gpio_task.h  http_server.h  message_types.h  mqtt_task.h  state_machine_task.h  wifi_task.h
lib/GPIO/: gpio_task.h
lib/StateMachine/: state_machine_task.h
main/: CMakeLists.txt  Kconfig.projbuild  application.c  aws_iot.c  http_server.c  idf_component.yml  main.c  state_machine_task.c  wifi_task.c
scripts/: flash_device.bat  flash_device.sh
src/: generic_task.c  gpio_task.c  http_server.c  main.c  mqtt_task.c  state_machine_task.c  state_machine_task.cpp  wifi_task.c
test_app/: CMakeLists.txt  sdkconfig
test_app/main/: CMakeLists.txt  script_helpers.c  script_helpers.h  test_app_main.c  test_application.c  test_aws_iot_task.c  test_file_system.c  test_generic_task.c  test_gpio_interrupt.c  test_gpio_task.c  test_state_machine_task.c  test_wifi_task.c
test_app/main/include/: test_application.h
test_app/scripts/: README.md  add_test_group.bat  add_test_group.sh
